--- a/app/assets/stylesheets/application.css.scss.css
+++ b/app/assets/stylesheets/application.css.scss.css
@@ -34,50 +34,39 @@
 	min-height: 646px;
 	position: absolute;
 }
-
 .main {
-	color:white;
+	color:gray;
 	font-family: bryant-web;
+	background: #fff;
+	margin: auto;
+	float:left;
 	
 	.heading {
 		font-size: 40px;
-		background: #fff;
 		height: 100px;
-		width:100%;
-		margin-top: 20px;
-		margin-left: 20px;
-		position: absolute;
+		width:800px;
 		text-align:center;
 		
 	}
 	
 	.leftmargin {
-		color: gray;
-		background: #fff;
 		font-size: 30px;
-		margin-left:20px;
-		margin-top: 140px;
-		margin-bottom: 20px;
-		height:100%;
+		height:560px;
 		width: 300px;
-		position: absolute;
 		text-align: center;
 	}
 	
 	.content{
-		color:gray;
-		margin-top: 140px;
-		margin-left: 340px;
-		width:100%;
-		height:100%;
-		position: absolute;
+		width:580px;
+		height:560px;
 		text-align: center;
-		background: #fff;
 	}
-	top {
+	
+	.top {
 		color:gray;
 		font-size: 40px;
 	}
+
 	
 .mb {margin-bottom: 50px;}
 .mr {margin-right: 50px;}
